# dupeguru

./: .ctags  .gitignore  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  .sonarcloud.properties  .travis.yml  404.html  CNAME  CONTRIBUTING.md  CREDITS  Gemfile  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  Windows.md  _config.yml  about.md  bootstrap.sh  build.py  commitlint.config.js  configure.py  download_deps.sh  downloads.md  index.html  macos.md  package.py  pyproject.toml  requirements-extra.txt  requirements-osx.txt  requirements-win.txt  requirements-windows.txt  requirements.txt  run.py  run_template_cocoa.py  run_template_qt.py  (+5 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.tx/: config
_data/: downloads.yml  externallinks.yml
_includes/: footer.html  head.html  header.html
_layouts/: home.html
_posts/: 2021-03-09-macOS_version_notes.md  2021-08-14-macOS_releases_going_forward.md  2022-03-09-macOS_cocoa_phase_out.md
assets/: main.scss
cocoa/: AppDelegate.h  AppDelegate.m  Consts.h  DetailsPanel.h  DetailsPanel.m  DetailsPanelPicture.h  DetailsPanelPicture.m  DirectoryPanel.h  DirectoryPanel.m  InfoTemplate.plist  PrioritizeDialog.m  PrioritizeList.m  ProblemDialog.m  ResultTable.h  ResultWindow.h  ResultWindow.m  StatsLabel.h  StatsLabel.m  dg_cocoa.py  dupeguru.icns  run_template.py  waf  wscript
cocoalib/: .gitignore  Dialogs.h  Dialogs.m  HSAboutBox.h  HSAboutBox.m  HSErrorReportWindow.h  HSErrorReportWindow.m  HSFairware.h  HSFairware.m  HSFairwareAboutBox.h  HSFairwareAboutBox.m  HSFairwareProtocol.h  HSFairwareReminder.h  HSFairwareReminder.m  HSGeometry.h  HSGeometry.m  HSPyUtil.h  HSPyUtil.m  HSQuicklook.h  HSQuicklook.m  HSRecentFiles.h  HSRecentFiles.m  LICENSE  NSEventAdditions.h  NSEventAdditions.m  NSImageAdditions.h  NSImageAdditions.m  NSNotificationAdditions.h  NSNotificationAdditions.m  ProgressController.h  ProgressController.m  Utils.h  Utils.m  ValueTransformers.h  ValueTransformers.m  Worker.h
core/: __init__.py  app.py  app_cocoa.py  app_cocoa_inter.py  data.py  directories.py  engine.py  exclude.py  export.py  fs.py  ignore.py  markable.py  prioritize.py  results.py  scanner.py  util.py
core_me/: __init__.py  app.py  app_cocoa.py  data.py  fs.py  prioritize.py  result_table.py  scanner.py
core_pe/: __init__.py  app.py  app_cocoa.py  block.py  cache.py  data.py  exif.py  gen.py  iphoto_plist.py  matchbase.py  matchblock.py  matchexif.py  photo.py  prioritize.py  result_table.py  scanner.py
core_se/: __init__.py  app.py  app_cocoa.py  data.py  fs.py  result_table.py  scanner.py
debian/: Makefile  changelog  control  copyright  dirs  dupeguru.desktop  install  me.json  pe.json  rules  se.json
debian_me/: control  dupeguru_me.desktop  rules
debian_pe/: control  copyright  dupeguru_pe.desktop  rules
debian_se/: control  copyright  dupeguru_se.desktop  rules
help/: changelog  changelog_me  changelog_pe  changelog_se  conf.tmpl
help_me/: CHANGELOG  LICENSE  changelog.yaml  conf.yaml  gen.py
help_pe/: CHANGELOG  changelog.yaml  gen.py
help_se/: CHANGELOG  changelog.yaml  conf.yaml  gen.py
hscommon/: .gitignore  LICENSE  README  build.py  build_ext.py  conflict.py  currency.py  debug.py  desktop.py  error_report.py  geometry.py  io.py  loc.py  notify.py  path.py  plat.py  pygettext.py  reg.py  sphinxgen.py  sqlite.py  testutil.py  trans.py  util.py
images/: exchange.icns  exchange_purple_waifu_s4_tta8.xcf
locale/: columns.pot  core.pot  qtlib.pot  ui.pot
pkg/: dupeguru.desktop
py/: app.py  app_cocoa.py  app_cocoa_test.py  app_pe_cocoa.py  app_se_cocoa.py  app_test.py  data_me.py  data_pe.py  directories.py  engine_test.py  export_test.py  gen.py  scanner.py  scanner_test.py
qt/: ABOUT_LICENSE  about_box.py  app.py  column.py  deletion_options.py  (+28 more)
(+1330 files in other folders)
