[metadata]
name = dupeGuru
version = attr: core.__version__
url = https://github.com/arsenetar/dupeguru
project_urls = 
    Bug Reports = https://github.com/arsenetar/dupeguru/issues
author = Andrew Senetar
author_email = arsenetar@voltaicideas.net
license = GPLv3
license_files = license
description = dupeGuru is a tool to find duplicate files on your computer.
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Desktop Environment :: File Managers

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    Send2Trash>=1.3.0
    mutagen>=1.45.1
    distro>=1.5.0
    PyQt5 >=5.14.1,<6.0; sys_platform != 'linux'
    pywin32>=228; sys_platform == 'win32'
    semantic-version>=2.0.0,<3.0.0
    xxhash>=3.0.0,<4.0.0
setup_requires =
    sphinx>=3.0.0
    polib>=1.1.0
tests_require = 
    pytest >=6,<7
include_package_data = true

[options.entry_points]
console_scripts =
    dupeguru = run.py
